Fix laptop model overlap in alternate layout by extending leftward

--- a/app/routes/home/project-summary.module.css
+++ b/app/routes/home/project-summary.module.css
@@ -98,6 +98,11 @@
     top: 6%;
     left: 14%;
 
+    :global([data-alternate='true']) & {
+      left: auto;
+      right: 14%;
+    }
+
     @media (--mediaDesktop) {
       --width: 180%;
     }
@@ -107,6 +112,11 @@
 
       top: 10%;
       left: 0;
+
+      :global([data-alternate='true']) & {
+        left: 0;
+        right: auto;
+      }
     }
   }
 
